--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,17 @@
 Package: EWGoF
 Type: Package
-Title: Goodness-of-fit tests for the Exponential and two-parameter
-        Weibull distributions
-Version: 2.0
-Date: 2014-01-13
-Author: Meryam KRIT
-Maintainer: Meryam KRIT <meryam.krit@imag.fr>
-Description: This package contains a large number of the goodness-of-fit tests for the Exponential and Weibull distributions classified into families: the tests based on the empirical distribution function, the tests based on the probability plot, the tests based on the normalized spacings, the tests based on the Laplace transform and the likelihood based tests.
+Title: Goodness-of-Fit Tests for the Exponential and Two-Parameter
+        Weibull Distributions
+Version: 2.1
+Date: 2015-05-29
+Author: Meryam Krit
+Maintainer: Meryam Krit <meryam.krit@imag.fr>
+Description: An implementation of a large number of the goodness-of-fit tests for the exponential and Weibull distributions classified into families: the tests based on the empirical distribution function, the tests based on the probability plot, the tests based on the normalized spacings, the tests based on the Laplace transform and the likelihood-based tests.
 License: GPL (>= 2.0)
-Imports: Rcpp (>= 0.10.3), maxLik, miscTools
+Imports: Rcpp (>= 0.10.3)
 LinkingTo: Rcpp
 LazyLoad: yes
-Packaged: 2014-04-08 07:15:23 UTC; mkrit
+Packaged: 2015-05-29 13:15:57 UTC; mkrit
 NeedsCompilation: yes
 Repository: CRAN
-Date/Publication: 2014-04-08 09:47:41
+Date/Publication: 2015-05-29 19:11:57
